# sigepy

./: .readthedocs.yaml  LICENSE  Lista verificación.md  README.md  conf.py  pyproject.toml  requirements.txt
docs/: conf.py  ind_ex.rst  index.rst  modules.rst
docs/api/: fourier.rst  ssi_cov.rst  utils.rst  wavelet.rst
docs/source/: conf.py  fourier.rst  index.rst  modules.rst  sigepy.rst  ssi_cov.rst  utils.rst  wavelet.rst
docs/source/api/: fourier.rst  ssi_cov.rst  utils.rst  wavelet.rst
docs/source/modules/: fourier.rst  ssi_cov.rst  utils.rst  wavelet.rst
mediciones_puente/: Datos para procesamiento.xlsx  Organización de archivos.docx
mediciones_puente/02-C1Rb/: Bridge Test_R15_12_12_2022_12_32_44.tdms  Bridge Test_R17_12_12_2022_14_29_18.tdms
mediciones_puente/03-C2R/: Bridge Test_R19_12_12_2022_15_50_59.tdms  Bridge Test_R21_12_13_2022_08_45_17.tdms
src/epy_signal/: plot.py  utils.py
src/sigepy/: __init__.py  fourier.py  ssi_cov.py  utils.py  wavelet.py
src/sigepy/data/espectros_cscr_2002/: CSCR02 FED S1-Z2-u4.0.txt  CSCR02 FED S1-Z3-u2.0.txt  CSCR02 FED S1-Z4-u3.0.txt  CSCR02 FED S2-Z2-u1.0.txt  CSCR02 FED S2-Z2-u1.5.txt  CSCR02 FED S2-Z2-u2.0.txt  CSCR02 FED S2-Z2-u4.0.txt  CSCR02 FED S2-Z2-u6.0.txt  (+28 more)
src/signalepy/: analysis.py  fourier.py  measurements.py  plot.py  ssi_cov.py  utils.py  wavelet.py
tests/test_data/: acceleration.csv
tests/test_data/espectros_cscr_2002/: CSCR02 FED S1-Z2-u2.0.txt  CSCR02 FED S1-Z3-u1.5.txt  CSCR02 FED S2-Z2-u3.0.txt  CSCR02 FED S2-Z3-u1.0.txt  CSCR02 FED S2-Z3-u1.5.txt  CSCR02 FED S2-Z4-u2.0.txt  CSCR02 FED S3-Z2-u1.5.txt  CSCR02 FED S3-Z3-u1.0.txt  CSCR02 FED S3-Z3-u4.0.txt  CSCR02 FED S3-Z4-u4.0.txt  CSCR02 FED S4-Z2-u2.0.txt  CSCR02 FED S4-Z3-u1.5.txt  CSCR02 FED S4-Z3-u4.0.txt  CSCR02 FED S4-Z4-u2.0.txt  CSCR02 FED S4-Z4-u4.0.txt
tutorials/: cable.ipynb  cable_atirantado.ipynb  conocida.ipynb  fourier_analysis.ipynb  señal_artificial_cscr.ipynb  señal_artificial_genérica.ipynb  ssicov_analysis.ipynb  wavelet_analysis.ipynb
tutorials/.jupyter/: desktop-settings.json
tutorials/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
(+11 files in other folders)
