[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalepy"
version = "0.1.0"
authors = [
    { name = "Angel Navarro-Mora", email = "ahnavarro@anmingeniería.com" },
]

description = "Package for signal processing for structural vibrations analysis."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
dependencies = []
[project.urls]
"Homepage" = "https://github.com/estructuraPy/signalepy"

[tool.setuptools]
packages = ["signalepy"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
timber_nds = ["tests/*.py"]